fixed login-register flickering issues

--- a/public/project/css/creative.css
+++ b/public/project/css/creative.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
   border-color: #F05F40;
@@ -155,7 +155,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('img/familyhome.jpg');
+  background-image: url('../img/familyhome.jpg');
   text-align: center;
   color: white;
 }
