--- a/public/project/css/login.css
+++ b/public/project/css/login.css
@@ -1,6 +1,8 @@
-body {
+#loginDiv, #registerDiv {
     padding-top: 90px;
+    font-family: Arial;
 }
+
 .panel-login {
     border-color: #ccc;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
